--- a/Mr.Driller/Mr.Driller/Mr.Driller.vcxproj.filters
+++ b/Mr.Driller/Mr.Driller/Mr.Driller.vcxproj.filters
@@ -21,7 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SystemManager.cpp">
-      <Filter>ソース ファイル</Filter>
+      <Filter>リソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
