--- a/Mr.Driller/Mr.Driller/Mr.Driller.vcxproj
+++ b/Mr.Driller/Mr.Driller/Mr.Driller.vcxproj
@@ -148,9 +148,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ERROR.h" />
     <ClInclude Include="SystemManager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="SystemManager.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
